--- a/langchain.ipynb
+++ b/langchain.ipynb
@@ -2,28 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.schema import StrOutputParser\n",
-    "from langchain.schema.runnable import RunnablePassthrough"
+    "from langchain.callbacks import StreamingStdOutCallbackHandler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ChatOpenAI(temperature=0.1)"
+    "model = ChatOpenAI(\n",
+    "    model_name=\"gpt-3.5-turbo\",\n",
+    "    streaming=True,\n",
+    "    callbacks=[\n",
+    "        StreamingStdOutCallbackHandler(),\n",
+    "    ],\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,17 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the haiku generation chain\n",
-    "haiku_chain = haiku_template | model | StrOutputParser()"
+    "haiku_chain = haiku_template | model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,12 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the explanation chain\n",
-    "explanation_chain = explanation_template | model | StrOutputParser()"
+    "explanation_chain = explanation_template | model"
    ]
   },
   {
@@ -83,46 +88,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the combined chain\n",
-    "def combine_haiku_and_explanation(inputs):\n",
-    "    return {\n",
-    "        \"haiku\": inputs[\"haiku\"],\n",
-    "        \"explanation\": inputs[\"explanation\"],\n",
-    "        \"language\": inputs[\"language\"],\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "# Create the final chain using LCEL\n",
-    "final_chain = (\n",
-    "    {\"language\": RunnablePassthrough()}\n",
-    "    | {\"haiku\": haiku_chain, \"language\": RunnablePassthrough()}\n",
-    "    | {\n",
-    "        \"haiku\": lambda x: x[\"haiku\"],\n",
-    "        \"explanation\": explanation_chain,\n",
-    "        \"language\": lambda x: x[\"language\"],\n",
-    "    }\n",
-    "    | combine_haiku_and_explanation\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test the chain with a programming language\n",
-    "result = final_chain.invoke(\"Python\")\n",
-    "\n",
-    "print(f\"Programming Language: {result['language']}\\n\")\n",
-    "print(f\"Haiku:\\n{result['haiku']}\\n\")\n",
-    "print(f\"Explanation:\\n{result['explanation']}\")"
+    "final_chain = {\"haiku\": haiku_chain} | explanation_chain\n",
+    "final_chain.invoke({\"language\": \"Python\"})"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "llm",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
